--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>bootstrap</artifactId>
 			<version>4.3.1</version>
 		</dependency>
+		<dependency>
+  			<groupId>org.zkoss.addons</groupId>
+  			<artifactId>zk-bootstrap</artifactId>
+  			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
